--- a/servithenEN/htmlEN/SolutionConnecteeGestionDistanceEN.html
+++ b/servithenEN/htmlEN/SolutionConnecteeGestionDistanceEN.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
-    <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="/servithenEN/cssEN/accueilEN.css">
+    <link rel="stylesheet" href="../cssEN/appliEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="/servithenEN/jsEN/confianceEN.js"></script>
@@ -18,17 +19,16 @@
 
     <header>
 
-        <!-- La bar navigation   -->
+        <!-- La bar navigation      -->
 
         <div class="navbar">
 
 
             <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
 
-            <a href="/servithenFR/htmlFR/presentationFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
+            <a href="/servithenFR/htmlFR/SolutionConnecteeGestionDistanceFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
-            <a href="/servithenEN/htmlEN/presentationEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
-
+            <a href="/servithenEN/htmlEN/SolutionConnecteeGestionDistanceEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
 
             <div class="dropdown">
@@ -94,57 +94,46 @@
 
     </header>
 
-    <!-- texte sur l'image en haut de la page -->
-
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p class="pTitre">
-                Servithen, French industry, <br> 30 years of expertise. <br>
+                Discover our application : <br>
             </p>
         </div>
-        <div id="soustxtAccueil">
+        <div id="nomAppli">
             <p class="pTitre">
-                Engineering, audit and project management assistance.
+                MyPartner.
             </p>
         </div>
 
     </div>
+
     <div class="page"></div>
 
-    <!-- texte et prix gazellz -->
 
-    <section class="nav">
-        <div class="fond2">
-            <h3>Presentation</h3>
-            <div class="déco">
-                <div class="sphère"></div>
-                <div class="transmission"></div>
-                <div class="barre"></div>
-                <div class="sphère"></div>
-            </div>
-            <p class="presentation">The company Servithen (Services Thermique Environnement) was created in 1986. Mainly focused originally on the audit and compliance of existing thermal installations, it has extended its services to the installation of incineration and treatment
-                of fumes or gaseous effluents and the supply of specific equipment, or "turnkey" installations, with in particular:
-            </p>
-            <p class="presentation"> · Furnaces,<br><br> · Flue gas scrubbers for dust reduction and acid gas neutralization,<br><br> · Wet electrostatic filters allowing high dust collection efficiencies,<br><br> Units dry treatment of incineration fumes,<br><br> · Installations
-                for the treatment of volatile organic compounds (VOC), odors or deNOx treatment.
-            </p>
-            <p class="presentation"> The SERVITHEN Company was awarded the Gazelle 2005 label by the Minister of SMEs, Trade, Crafts and Liberal Professions, Mr. Renaud DUTREIL. This trophy rewards 2,000 French companies out of 1.2 million SME. The gazelles selected are the SMEs
-                which grew during the period studied from 1993 to 2003, i.e. two or three times faster than those in the same sector of activity, i.e. those which are in the top 5 or 10% of their population in terms of of growth and which have a higher
-                profitability than that of their counterparts. The objective of this government program is to help maintain the rapid growth of these most dynamic SMEs. In particular, by mobilizing all the skills to enable them to support their growth,
-                in particular by enriching their relational network, and by giving them access to specific offers from partners, among other financiers</p>
-
-            <p class="texteGazelle">SERVITHEN Prix Gazelle 2005 :</p>
-            <img class="prixGazelle" src="/img/20220310_152203741_iOS.jpeg" alt="photo prix gazette">
-
+    <div id="containerAppli">
+        <h1>What is MyPartner ?</h1>
+        <div id="videoPres">
+            <video width="500" height="320" controls>
+                <source src="/video/PrésentationMP.mp4" type="video/mp4">
+            </video>
         </div>
-    </section>
+        <div id="pInfoAppli">
+            <p>MyPartner is an application allowing efficient access to information, <br> without wasting time or energy, increases the efficiency and productivity of teams. <br> We must find new solutions to meet today's needs.<br> MyPartner is a solution
+                that allows the global management of a fleet of machines<br> industrial and / or tertiary with complete management of equipment documentation.
+            </p>
+        </div>
 
-    <!-- Les partenaires et nous font confiance -->
 
+
+
+
+        <a target="_blank" href="https://play.google.com/store/apps/details?id=com.industriesolution.mypartner&hl=fr&gl=IL"> <img src="/img/play-store.png" alt="google play store"></a>
+
+    </div>
     <div id="caroussel">
-
         <div class="container2">
-            <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
+            <h3 class="text-center2 font-weight-bold2">Our partners :</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
@@ -188,10 +177,11 @@
     <!-- bas de la page avec les coordonnées -->
 
 
+    <!-- bas de la page avec les coordonnées -->
     <footer class="coordonne">
 
         <div class="foters">
-            <h4>Contact information :</h4>
+            <h4>Coordinated :</h4>
         </div>
 
         <div class="foter">
@@ -217,10 +207,11 @@
         </div>
 
 
+
         <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | All rights reserved | <a class="Copyright" href="/servithenEN/htmlEN/MentionsLegalesEN.html">Legal Notice</a> </p>
 
-
     </footer>
+
 </body>
 
 </html>
