--- a/servithenFR/htmlFR/SolutionConnecteeGestionDistanceFR.html
+++ b/servithenFR/htmlFR/SolutionConnecteeGestionDistanceFR.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/Logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="/servithenEN/cssEN/accueilEN.css">
-    <link rel="stylesheet" href="../cssEN/appliEN.css">
+    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="../cssFR/appli.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script src="/servithenEN/jsEN/confianceEN.js"></script>
+    <script src="/servithenFR/jsFR/confianceFR.js"></script>
 
 </head>
 
@@ -23,26 +23,25 @@
 
         <div class="navbar">
 
+            <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
 
-            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+            <a href="/servithenFR/htmlFR/SolutionConnecteeGestionDistanceFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
-            <a href="/servithenFR/htmlFR/appli.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
-
-            <a href="/servithenEN/htmlEN/appliEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
+            <a href="/servithenEN/htmlEN/SolutionConnecteeGestionDistanceEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
 
             <div class="dropdown">
 
-                <a class="MenuBtn" href="/servithenEN/htmlEN/formEN.html">CONTACT US</a>
+                <a class="MenuBtn" href="/servithenFR/htmlFR/formFR.html">NOUS CONTACTER</a>
 
             </div>
 
             <div class="dropdown">
-                <button class="dropbtn">INDUSTRY 4.0 
+                <button class="dropbtn">INDUSTRIE 4.0 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN/appliEN.html">MyPartner</a>
-                    <a href="/servithenEN/htmlEN/SolutionConnecteeGestionDistanceEN.html">Connected remote management solution</a>
+                    <a href="/servithenFR/htmlFR/appli.html">MyPartner</a>
+                    <a href="/servithenFR/htmlFR/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
                 </div>
             </div>
 
@@ -50,42 +49,42 @@
                 <button class="dropbtn">SERVICES 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN/serviceEN/service1EN.html">Installation Audits and Expertise</a>
-                    <a href="/servithenEN/htmlEN/serviceEN/service2EN.html">Upgrading to regulatory standards</a>
-                    <a href="/servithenEN/htmlEN/serviceEN/service3EN.html">Energy recovery</a>
-                    <a href="/servithenEN/htmlEN/serviceEN/service4EN.html">Feasibility studies, pre-projects and detailed studies</a>
-                    <a href="/servithenEN/htmlEN/serviceEN/service5EN.html">Preventive / curative maintenance</a>
+                    <a href="serviceFR/service1.html">Audits et Expertises d’installations</a>
+                    <a href="serviceFR/service2.html">Remise aux normes réglementaire </a>
+                    <a href="serviceFR/service3.html">Valorisation énergétique</a>
+                    <a href="serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                    <a href="serviceFR/service5.html">Maintenance préventive / curative</a>
                 </div>
             </div>
 
             <div class="dropdown">
-                <button class="dropbtn">PRODUCTS
+                <button class="dropbtn">PRODUITS 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/ToursDeLavageEN.html">washing towers</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/VenturiEN.html">Venturi</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/ElectrofiltresHumidesSecsEN.html">Wet/dry electrofilters</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/FiltresManchesEN.html">Bag filters</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/EquipementsDosageInjectionDePoudresEN.html">EDIP: Powder Dosing and Injection Equipment</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/InstallationsEN.html">“Turnkey” installations</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/RecuperationEnergiEN.html">Energy recovery</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/ToursDeLavageFR.html">Tours de lavage</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html">Venturi</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/FiltresManchesFR.html">Filtres à manches</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/InstallationsFR.html">Installations « Clés en mains »</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/RecuperationEnergiFR.html">Récupération d’énergie</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
                 </div>
             </div>
 
             <div class="dropdown">
-                <button class="dropbtn">EXPERTISE 
+                <button class="dropbtn">SAVOIR-FAIRE 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN/presentationEN.html">Our job</a>
-                    <a href="/servithenEN/htmlEN/pourquoiServithenEN.html"> Why Servithen</a>
-                    <a href="/servithenEN/htmlEN/notreEngagementEN.html">Our engagement</a>
+                    <a href="/servithenFR/htmlFR/presentationFR.html">Notre métier</a>
+                    <a href="/servithenFR/htmlFR/pourquoiServithenFR.html">Pourquoi Servithen</a>
+                    <a href="/servithenFR/htmlFR/notreEngagementFR.html">Notre engagement</a>
                 </div>
             </div>
 
             <div class="dropdown">
 
-                <a class="MenuBtn" href="/servithenEN/htmlEN/accueilEN.html">HOME</a>
+                <a class="MenuBtn" href="/servithenFR/htmlFR/accueilFR.html">ACCUEIL</a>
 
             </div>
         </div>
@@ -97,7 +96,7 @@
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p class="pTitre">
-                Discover our application : <br>
+                Decrouvrez notre application: <br>
             </p>
         </div>
         <div id="nomAppli">
@@ -112,19 +111,23 @@
 
 
     <div id="containerAppli">
-        <h1>What is MyPartner ?</h1>
+        <h1>Qu'est ce que MyPartner :</h1>
         <div id="videoPres">
             <video width="500" height="320" controls>
                 <source src="/video/PrésentationMP.mp4" type="video/mp4">
             </video>
         </div>
         <div id="pInfoAppli">
-            <p>MyPartner is an application allowing efficient access to information, <br> without wasting time or energy, increases the efficiency and productivity of teams. <br> We must find new solutions to meet today's needs.<br> MyPartner is a solution
-                that allows the global management of a fleet of machines<br> industrial and / or tertiary with complete management of equipment documentation.
-            </p>
+            <p>MyPartner est une application permettant d'accédez efficacement à l’information, <br> sans perte de temps ni d’énergie permet d’accroître l’efficacité et la productivité <br> des équipes. <br> Nous nous devons de trouver des nouvelles solutions
+                pour répondre aux besoins d’aujourd’hui.<br> MyPartner est une solution qui permet la gestion globale d’un parc de machines <br> industrielles et / ou tertiaire avec une gestion complète de la documentation des équipements.</p>
         </div>
 
-
+        <div id="containerImg">
+            <img class="ppExplication" src="/img/MP-p1.png" alt="page 1 explication">
+            <img class="ppExplication" src="/img/MP-p2.png" alt="page 2 explication">
+            <img class="ppExplication" src="/img/MP-p3.png" alt="page 3 explication">
+            <img class="ppExplication" src="/img/MP-p4.png" alt="page 4 explication">
+        </div>
 
 
 
@@ -133,7 +136,7 @@
     </div>
     <div id="caroussel">
         <div class="container2">
-            <h3 class="text-center2 font-weight-bold2">Our partners :</h3>
+            <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
@@ -174,44 +177,39 @@
         </div>
 
     </div>
-    <!-- bas de la page avec les coordonnées -->
 
 
     <!-- bas de la page avec les coordonnées -->
     <footer class="coordonne">
 
         <div class="foters">
-            <h4>Coordinated :</h4>
+            <h4>Coordonnées :</h4>
         </div>
 
         <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/logoTelW.png" alt="logo telephone ">
+            <img class="logoinfo" src="/img/LogoFooter/logoTelW.png" alt="logo telephone">
             <a class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
         </div>
         <br>
         <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/logoMailW.png" alt="logo mail ">
+            <img class="logoinfo" src="/img/LogoFooter/logoMailW.png" alt="logo mail">
             <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
         </div>
         <br>
         <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/linkedinW.png" alt="logo linkedin ">
+            <img class="logoinfo" src="/img/LogoFooter/linkedinW.png" alt="logo linkedin">
             <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
         </div>
         <br>
         <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/logoPosW.png" alt="logo position ">
+            <img class="logoinfo" src="/img/LogoFooter/logoPosW.png" alt="logo position">
             <a class="footerp" target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
         </div>
-
-
-
-        <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | All rights reserved | <a class="Copyright" href="/servithenEN/htmlEN/MentionsLegalesEN.html">Legal Notice</a> </p>
+        <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
 
     </footer>
-
 </body>
 
 </html>
