--- a/servithenEN/htmlEN/accueilEN.html
+++ b/servithenEN/htmlEN/accueilEN.html
@@ -39,8 +39,8 @@
                 <button class="dropbtn">INDUSTRY 4.0 
               </button>
                 <div class="dropdown-content3">
-                    <a href="appliEN.html">MyPartner</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                    <a href="/servithenEN/htmlEN/appliEN.html">MyPartner</a>
+                    <a href="/servithenEN/htmlEN/SolutionConnecteeGestionDistanceEN.html">Connected remote management solution</a>
                 </div>
             </div>
 
@@ -75,9 +75,9 @@
                 <button class="dropbtn">EXPERTISE 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN/presentationEN.html">Presentation</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                    <a href="/servithenEN/htmlEN/presentationEN.html">Our job</a>
+                    <a href="/servithenEN/htmlEN/pourquoiServithenEN.html"> Why Servithen</a>
+                    <a href="/servithenEN/htmlEN/notreEngagementEN.html">Our engagement</a>
                 </div>
             </div>
 
