--- a/servithenEN/htmlEN/notreEngagementEN.html
+++ b/servithenEN/htmlEN/notreEngagementEN.html
@@ -7,11 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
-    <link rel="stylesheet" href="/servithenFR/cssFR/service.css">
+    <link rel="stylesheet" href="/servithenEN/cssEN/accueilEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script src="/servithenFR/jsFR/confianceFR.js"></script>
+    <script src="/servithenEN/jsEN/confianceEN.js"></script>
 
 </head>
 
@@ -21,77 +20,74 @@
 
         <!-- La bar navigation -->
 
-        <div class="navbarcontent">
-
-            <div class="navbar">
+        <div class="navbar">
 
 
+            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
 
-                <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+            <a href="/servithenFR/htmlFR/pourquoiServithenFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
-                <a href="/servithenFR/htmlFR/serviceFR/service1.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
-
-                <a href="/servithenEN/htmlEN/accueilEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
+            <a href="/servithenEN/htmlEN/pourquoiServithenEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
 
-                <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/formFR.html">CONTACT US</a>
+            <div class="dropdown">
 
-                </div>
-
-                <div class="dropdown">
-                    <button class="dropbtn">INDUSTRY 4.0 
-                  </button>
-                    <div class="dropdown-content3">
-                        <a href="/servithenEN/htmlEN/appliEN.html">MyPartner</a>
-                        <a href="/servithenEN/htmlEN/SolutionConnecteeGestionDistanceEN.html">Connected remote management solution</a>
-                    </div>
-                </div>
-
-                <div class="dropdown">
-                    <button class="dropbtn">EXPERTISE 
-                  </button>
-                    <div class="dropdown-content3">
-                        <a href="/servithenEN/htmlEN/presentationEN.html">Our job</a>
-                        <a href="/servithenEN/htmlEN/pourquoiServithenEN.html"> Why Servithen</a>
-                        <a href="/servithenEN/htmlEN/notreEngagementEN.html">Our engagement</a>
-                    </div>
-                </div>
-
-                <div class="dropdown">
-                    <button class="dropbtn">PRODUCTS 
-                  </button>
-                    <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/ToursDeLavageFR.html">washing towers</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html">Venturi</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html">Wet/dry electrofilters</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/FiltresManchesFR.html">Filtres à manches</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/EquipementsDosageInjectionDePoudresFR.html">EDIP: Powder Dosing and Injection Equipment</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/InstallationsFR.html">“ Turnkey ” installations</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/RecuperationEnergiFR.html">Energy recovery</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/FourniturePiecesRechangeFR.html">Supply of spare parts</a>
-                    </div>
-                </div>
-
-                <div class="dropdown">
-                    <button class="dropbtn">EXPERTISE 
-                  </button>
-                    <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR/presentationFR.html">Presentation</a>
-                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
-                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
-                    </div>
-                </div>
-
-                <div class="dropdown">
-
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/accueilFR.html">HOME</a>
-
-                </div>
+                <a class="MenuBtn" href="/servithenEN/htmlEN/formEN.html">CONTACT US</a>
 
             </div>
 
+            <div class="dropdown">
+                <button class="dropbtn">INDUSTRY 4.0 
+              </button>
+                <div class="dropdown-content3">
+                    <a href="/servithenEN/htmlEN/appliEN.html">MyPartner</a>
+                    <a href="/servithenEN/htmlEN/SolutionConnecteeGestionDistanceEN.html">Connected remote management solution</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="dropbtn">SERVICES 
+              </button>
+                <div class="dropdown-content3">
+                    <a href="serviceEN/service1.html">Installation Audits and Expertise</a>
+                    <a href="serviceEN/service2.html">Upgrading to regulatory standards </a>
+                    <a href="serviceEN/service3.html">Energy recovery</a>
+                    <a href="serviceEN/service4.html">Feasibility studies, pre-projects and detailed studies</a>
+                    <a href="serviceEN/service5.html">Preventive / curative maintenance</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="dropbtn">PRODUCTS 
+              </button>
+                <div class="dropdown-content3">
+                    <a href="/servithenEN/htmlEN//ProduitEN.html/ToursDeLavageEN.html">washing towers</a>
+                    <a href="/servithenEN/htmlEN//ProduitEN.html/VenturiEN.html">Venturi</a>
+                    <a href="/servithenEN/htmlEN//ProduitEN.html/ElectrofiltresHumidesSecsEN.html">Wet / dry electrofilters</a>
+                    <a href="/servithenEN/htmlEN//ProduitEN.html/FiltresManchesEN.html">Filtres à manches</a>
+                    <a href="/servithenEN/htmlEN//ProduitEN.html/EquipementsDosageInjectionDePoudresEN.html">EDIP : Powder Dosing and Injection Equipment</a>
+                    <a href="/servithenEN/htmlEN//ProduitEN.html/InstallationsEN.html">“ Turnkey ” installations</a>
+                    <a href="/servithenEN/htmlEN//ProduitEN.html/RecuperationEnergiEN.html">Energy recovery</a>
+                    <a href="/servithenEN/htmlEN//ProduitEN.html/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="dropbtn">EXPERTISE 
+              </button>
+                <div class="dropdown-content3">
+                    <a href="/servithenEN/htmlEN/presentationEN.html">Our job</a>
+                    <a href="/servithenEN/htmlEN/pourquoiServithenEN.html"> Why Servithen</a>
+                    <a href="/servithenEN/htmlEN/notreEngagementEN.html">Our engagement</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+
+                <a class="MenuBtn" href="/servithenEN/htmlEN/accueilEN.html">HOME</a>
+
+            </div>
         </div>
 
 
@@ -108,41 +104,38 @@
         </div>
         <div id="soustxtAccueil">
             <p class="pTitre">
-                Installation audits and expertise.
+                Engineering, audit and project management assistance.
             </p>
         </div>
 
     </div>
-
-    <!-- section notre activité avec les image et les texte-->
-
     <div class="page"></div>
+    <!-- texte et prix gazellz -->
+
     <section class="nav">
-        <div class="fond">
-            <h3>Hot and cold audit</h3>
+        <div class="fond2">
+            <h3>Presentation</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="pInfoService">
-                <p class="textphoto">Hot: we inspect your equipment while it is running and stopped to ensure that it is working properly. We take a close look at the equipment to ensure the proper functioning of your installation/equipment Thanks to to our long experience
-                    in audits, we recommend improvements or modifications if necessary.
-                </p>
-            </div>
-            <div id="containerPhoto">
-                <img id="photoService1" src="/img/audit.JPG" alt="photo audit">
-                <img id="photoService2" src="/img/diagnosticAudit.jpg" alt="photo Diagnostic">
-            </div>
-            <div class="pInfoService">
-                <p class="textphoto">Cold audit: Thanks to our knowledge, we assess your equipment and installations using measurement tools such as (thickness measurement). A deliverable will be provided at the end of the expertise in order to improve or correct to ensure
-                    the proper functioning of your equipment. We thus inspect all types of equipment from the inside and outside, example of equipment: oven (Summit, Vault, Burners), recuperator, bag filter, DeNOx, exchanger, bag filter (Analysis in a
-                    certified laboratory), catalyst (Analysis in a certified laboratory) <br> The cold audit is a more in-depth inspection where we target the faulty or damaged equipment that we identify during operation of the installation.
-                </p>
-            </div>
+            <p class="presentation">The company Servithen (Services Thermique Environnement) was created in 1986. Mainly centered at the origin on the audit and the bringing into conformity of existing thermal installations, it extended its services to the installation of lines
+                incineration and treatment of fumes or gaseous effluents and the supply of specific equipment, or "turnkey" installations, with in particular:
+            </p>
+            <p class="presentation"> · Furnaces,<br><br> · Flue gas scrubbers for dust reduction and acid gas neutralization,<br><br> · Wet electrostatic filters allowing high dust collection efficiencies,<br><br> Units dry treatment of incineration fumes,<br><br> · Installations
+                for the treatment of volatile organic compounds (VOC), odors or deNOx treatment.
+            </p>
+            <p class="presentation"> The SERVITHEN Company was awarded the Gazelle 2005 label by the Minister of SMEs, Trade, Crafts and Liberal Professions, Mr. Renaud DUTREIL. This trophy rewards 2,000 French companies out of 1.2 million SME. The gazelles selected are the SMEs
+                which grew during the period studied from 1993 to 2003, i.e. two or three times faster than those in the same sector of activity, i.e. those which are in the top 5 or 10% of their population in terms of of growth and which have a higher
+                profitability than that of their counterparts. The objective of this government program is to help maintain the rapid growth of these most dynamic SMEs. In particular, by mobilizing all the skills to enable them to support their growth,
+                in particular by enriching their relational network, and by giving them access to specific offers from partners, among other financiers</p>
+
+
         </div>
     </section>
+
 
     <!-- Les partenaires et nous font confiance -->
 
@@ -191,8 +184,6 @@
 
     </div>
     <!-- bas de la page avec les coordonnées -->
-
-
     <footer class="coordonne">
 
         <div class="foters">
@@ -220,8 +211,6 @@
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
         </div>
-
-        <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | All rights reserved | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
 
     </footer>
 </body>
