--- a/servithenEN/htmlEN/serviceEN/service4EN.html
+++ b/servithenEN/htmlEN/serviceEN/service4EN.html
@@ -44,20 +44,18 @@
                     <button class="dropbtn">INDUSTRY 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="appli.html">MyPartner</a>
-                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                        <a href="/servithenEN/htmlEN/appliEN.html">MyPartner</a>
+                        <a href="/servithenEN/htmlEN/SolutionConnecteeGestionDistanceEN.html">Connected remote management solution</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn">SERVICES 
+                    <button class="dropbtn">EXPERTISE 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenEN/htmlEN/serviceEN/service1EN.html">Installation Audits and Expertise</a>
-                        <a href="/servithenEN/htmlEN/serviceEN/service2EN.html">Upgrading to regulatory standards</a>
-                        <a href="/servithenEN/htmlEN/serviceEN/service3EN.html">Energy recovery</a>
-                        <a href="/servithenEN/htmlEN/serviceEN/service4EN.html">Feasibility studies, pre-projects and detailed studies</a>
-                        <a href="/servithenEN/htmlEN/serviceEN/service5EN.html">Preventive / curative maintenance</a>
+                        <a href="/servithenEN/htmlEN/presentationEN.html">Our job</a>
+                        <a href="/servithenEN/htmlEN/pourquoiServithenEN.html"> Why Servithen</a>
+                        <a href="/servithenEN/htmlEN/notreEngagementEN.html">Our engagement</a>
                     </div>
                 </div>
 
