--- a/servithenFR/htmlFR/formFR.html
+++ b/servithenFR/htmlFR/formFR.html
@@ -43,8 +43,8 @@
                 <button class="dropbtn">INDUSTRIE 4.0 
               </button>
                 <div class="dropdown-content3">
-                    <a href="appli.html">MyPartner</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                    <a href="/servithenFR/htmlFR/appli.html">MyPartner</a>
+                    <a href="/servithenFR/htmlFR/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
                 </div>
             </div>
 
@@ -79,11 +79,12 @@
                 <button class="dropbtn">SAVOIR-FAIRE 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenFR/htmlFR/presentationFR.html">Présentation</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                    <a href="/servithenFR/htmlFR/presentationFR.html">Notre métier</a>
+                    <a href="/servithenFR/htmlFR/pourquoiServithenFR.html">Pourquoi Servithen</a>
+                    <a href="/servithenFR/htmlFR/notreEngagementFR.html">Notre engagement</a>
                 </div>
             </div>
+
 
             <div class="dropdown">
 
