--- a/servithenFR/htmlFR/notreEngagementFR.html
+++ b/servithenFR/htmlFR/notreEngagementFR.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/servithenEN/cssEN/accueilEN.css">
+    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script src="/servithenEN/jsEN/confianceEN.js"></script>
+    <script src="/servithenFR/jsFR/confianceFR.js"></script>
 
 </head>
 
@@ -18,31 +18,31 @@
 
     <header>
 
-        <!-- La bar navigation   -->
+        <!-- La bar navigation -->
 
         <div class="navbar">
 
 
-            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+            <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
 
-            <a href="/servithenFR/htmlFR/presentationFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
+            <a href="/servithenFR/htmlFR/notreEngagementFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
-            <a href="/servithenEN/htmlEN/presentationEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
+            <a href="/servithenEN/htmlEN/notreEngagementEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
 
 
             <div class="dropdown">
 
-                <a class="MenuBtn" href="/servithenEN/htmlEN/formEN.html">CONTACT US</a>
+                <a class="MenuBtn" href="/servithenFR/htmlFR/formFR.html">NOUS CONTACTER</a>
 
             </div>
 
             <div class="dropdown">
-                <button class="dropbtn">INDUSTRY 4.0 
+                <button class="dropbtn">INDUSTRIE 4.0 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN/appliEN.html">MyPartner</a>
-                    <a href="/servithenEN/htmlEN/SolutionConnecteeGestionDistanceEN.html">Connected remote management solution</a>
+                    <a href="/servithenFR/htmlFR/appli.html">MyPartner</a>
+                    <a href="/servithenFR/htmlFR/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
                 </div>
             </div>
 
@@ -50,42 +50,42 @@
                 <button class="dropbtn">SERVICES 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN/serviceEN/service1EN.html">Installation Audits and Expertise</a>
-                    <a href="/servithenEN/htmlEN/serviceEN/service2EN.html">Upgrading to regulatory standards</a>
-                    <a href="/servithenEN/htmlEN/serviceEN/service3EN.html">Energy recovery</a>
-                    <a href="/servithenEN/htmlEN/serviceEN/service4EN.html">Feasibility studies, pre-projects and detailed studies</a>
-                    <a href="/servithenEN/htmlEN/serviceEN/service5EN.html">Preventive / curative maintenance</a>
+                    <a href="serviceFR/service1.html">Audits et Expertises d’installations</a>
+                    <a href="serviceFR/service2.html">Remise aux normes réglementaire </a>
+                    <a href="serviceFR/service3.html">Valorisation énergétique</a>
+                    <a href="serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                    <a href="serviceFR/service5.html">Maintenance préventive / curative</a>
                 </div>
             </div>
 
             <div class="dropdown">
-                <button class="dropbtn">PRODUCTS
+                <button class="dropbtn">PRODUITS 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/ToursDeLavageEN.html">washing towers</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/VenturiEN.html">Venturi</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/ElectrofiltresHumidesSecsEN.html">Wet/dry electrofilters</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/FiltresManchesEN.html">Bag filters</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/EquipementsDosageInjectionDePoudresEN.html">EDIP: Powder Dosing and Injection Equipment</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/InstallationsEN.html">“Turnkey” installations</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/RecuperationEnergiEN.html">Energy recovery</a>
-                    <a href="/servithenEN/htmlEN//ProduitEN.html/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/ToursDeLavageFR.html">Tours de lavage</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html">Venturi</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/FiltresManchesFR.html">Filtres à manches</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/InstallationsFR.html">Installations « Clés en mains »</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/RecuperationEnergiFR.html">Récupération d’énergie</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
                 </div>
             </div>
 
             <div class="dropdown">
-                <button class="dropbtn">EXPERTISE 
+                <button class="dropbtn">SAVOIR-FAIRE 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN/presentationEN.html">Our job</a>
-                    <a href="/servithenEN/htmlEN/pourquoiServithenEN.html"> Why Servithen</a>
-                    <a href="/servithenEN/htmlEN/notreEngagementEN.html">Our engagement</a>
+                    <a href="/servithenFR/htmlFR/presentationFR.html">Notre métier</a>
+                    <a href="/servithenFR/htmlFR/pourquoiServithenFR.html">Pourquoi Servithen</a>
+                    <a href="/servithenFR/htmlFR/notreEngagementFR.html">Notre engagement</a>
                 </div>
             </div>
 
             <div class="dropdown">
 
-                <a class="MenuBtn" href="/servithenEN/htmlEN/accueilEN.html">HOME</a>
+                <a class="MenuBtn" href="/servithenFR/htmlFR/accueilFR.html">ACCUEIL</a>
 
             </div>
         </div>
@@ -99,45 +99,44 @@
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p class="pTitre">
-                Servithen, French industry, <br> 30 years of expertise. <br>
+                Servithen, industrie française, <br> 30 ans de savoir faire. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
             <p class="pTitre">
-                Engineering, audit and project management assistance.
+                Ingénierie, audit et assistance à la maitrise d'ouvrage.
             </p>
         </div>
 
     </div>
     <div class="page"></div>
-
     <!-- texte et prix gazellz -->
 
     <section class="nav">
         <div class="fond2">
-            <h3>Presentation</h3>
+            <h3>Présentation</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <p class="presentation">The company Servithen (Services Thermique Environnement) was created in 1986. Mainly focused originally on the audit and compliance of existing thermal installations, it has extended its services to the installation of incineration and treatment
-                of fumes or gaseous effluents and the supply of specific equipment, or "turnkey" installations, with in particular:
+            <p class="presentation">La société Servithen (Services Thermique Environnement) a été créée en 1986. Principalement centrée à l'origine sur l'audit et la mise en conformité d'installations thermiques existantes elle a étendu ses prestations à l'installation de lignes
+                complètes d'incinération et de traitement de fumées ou d'effluents gazeux et à la fourniture d'équipements spécifiques, ou d'installations "clé-en-main", avec en particulier :
             </p>
-            <p class="presentation"> · Furnaces,<br><br> · Flue gas scrubbers for dust reduction and acid gas neutralization,<br><br> · Wet electrostatic filters allowing high dust collection efficiencies,<br><br> Units dry treatment of incineration fumes,<br><br> · Installations
-                for the treatment of volatile organic compounds (VOC), odors or deNOx treatment.
+            <p class="presentation"> · Des fours,<br><br> · Des laveurs de fumées pour l'abattement des poussières et la neutralisation des gaz acides,<br><br> · Des filtres électrostatiques humides permettant des rendements élevés de captation des poussières,<br><br> · Des unités
+                de traitement sec de fumées d'incinération,<br><br> · Des installations de traitement de composés organiques volatiles (COV), d'odeurs ou de traitement deNOx.
             </p>
-            <p class="presentation"> The SERVITHEN Company was awarded the Gazelle 2005 label by the Minister of SMEs, Trade, Crafts and Liberal Professions, Mr. Renaud DUTREIL. This trophy rewards 2,000 French companies out of 1.2 million SME. The gazelles selected are the SMEs
-                which grew during the period studied from 1993 to 2003, i.e. two or three times faster than those in the same sector of activity, i.e. those which are in the top 5 or 10% of their population in terms of of growth and which have a higher
-                profitability than that of their counterparts. The objective of this government program is to help maintain the rapid growth of these most dynamic SMEs. In particular, by mobilizing all the skills to enable them to support their growth,
-                in particular by enriching their relational network, and by giving them access to specific offers from partners, among other financiers</p>
+            <p class="presentation"> La Société SERVITHEN s’est vu décerner le label Gazelle 2005 par le ministre des PME, du commerce, de l’artisanat et des professions libérales, Monsieur Renaud DUTREIL. Ce trophée récompense 2.000 Entreprises françaises sur 1,2 millions de
+                PME. Les gazelles retenues sont les PME qui croissent pendant la période étudiée de 1993 à 2003, soit deux ou trois plus vite que celles du même secteur d’activité, soit celles qui sont dans le top 5 où 10 % de leur population en termes
+                de croissance et qui, ont une rentabilité supérieure à celle de leurs homologues. L’objectif de ce programme gouvernemental est de favoriser le maintien de la croissance rapide de ces PME les plus dynamiques. Notamment, en mobilisant toutes
+                les compétences pour leurs permettre de soutenir leur croissance, en particulier en enrichissant leur réseau relationnel, et en leur donnant accès à des offres spécifiques de partenaires, entre autres financiers</p>
 
             <p class="texteGazelle">SERVITHEN Prix Gazelle 2005 :</p>
             <img class="prixGazelle" src="/img/20220310_152203741_iOS.jpeg" alt="photo prix gazette">
-
         </div>
     </section>
+
 
     <!-- Les partenaires et nous font confiance -->
 
@@ -186,12 +185,10 @@
 
     </div>
     <!-- bas de la page avec les coordonnées -->
-
-
     <footer class="coordonne">
 
         <div class="foters">
-            <h4>Contact information :</h4>
+            <h4>Coordonnées :</h4>
         </div>
 
         <div class="foter">
@@ -215,10 +212,6 @@
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
         </div>
-
-
-        <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | All rights reserved | <a class="Copyright" href="/servithenEN/htmlEN/MentionsLegalesEN.html">Legal Notice</a> </p>
-
 
     </footer>
 </body>
