--- a/servithenFR/htmlFR/modifpresentationFR.html
+++ b/servithenFR/htmlFR/modifpresentationFR.html
@@ -165,6 +165,7 @@
                 <textarea id="Local" name="Localisation"></textarea>
                 <textarea id="LocalURL" name="LocalisationURL"></textarea>
             </div>
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
         </footer>
     </form>
 </body>
