--- a/servithenFR/htmlFR/serviceFR/service2.html
+++ b/servithenFR/htmlFR/serviceFR/service2.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/servithenFR/cssFR/service.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script  src="/servithenFR/jsFR/confianceFR.js"></script>
+    <script  src="/servithenFR/jsFR/service2FR.js"></script>
 
 </head>
 
@@ -104,12 +104,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">
                 Servithen, industrie française, <br> 30 ans de savoir faire. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 Audits et Expertises d’installations.
             </p>
         </div>
@@ -129,26 +129,19 @@
                 <div class="sphère"></div>
             </div>
             <div class="pInfoService">
-                <p class="textphoto">A chaud : on inspecte vos équipements pendant qu’ils sont en marche et à l’arrêt pour s’assurer de
-                    leur bon fonctionnement. Nous regardons de près les équipements pour s’assurer du bon
-                    fonctionnement de votre installation/équipement Grâce à notre longue expérience dans les audits,
-                    nous préconisons des améliorations ou des modifications si nécessaire.
+                <p id="text1" class="textphoto">A chaud : on inspecte vos équipements pendant qu’ils sont en marche et à l’arrêt pour s’assurer de leur bon fonctionnement. Nous regardons de près les équipements pour s’assurer du bon fonctionnement de votre installation/équipement Grâce
+                    à notre longue expérience dans les audits, nous préconisons des améliorations ou des modifications si nécessaire.
                 </p>
             </div>
             <div id="containerPhoto">
-            <img  id="photoService1" src="/img/audit.JPG" alt="photo audit">
-            <img  id="photoService2" src="/img/diagnosticAudit.jpg" alt="photo Diagnostic">
+                <img id="photoService1" src="/img/audit.JPG" alt="photo audit">
+                <img id="photoService2" src="/img/diagnosticAudit.jpg" alt="photo Diagnostic">
             </div>
             <div class="pInfoService">
-                <p class="textphoto">Audit à froid :
-                    Grâce à nos connaissances, nous expertisons vos équipements et installations en utilisant des outils
-                    de mesures comme (mesure d’épaisseurs). Un livrable sera fourni à la fin des expertises dans le but
-                    d’améliorer ou de corriger de garantir le bon fonctionnement de vos équipements.
-                    On inspecte ainsi tout type d’équipements de l’intérieur et de l’extérieur, exemple d’équipements :
-                    four (Sommet, Voute, Bruleurs), récupérateur, filtre à manche, DéNOx, échangeur, filtre à manche (Analyse dans un laboratoire certifié), 
-                    catalyseur (Analyse dans un laboratoire certifié) <br>
-                    L’audit à froid est une inspection plus approfondie où on cible l’équipement défaillant ou
-                    endommagé qu’on identifie pendant le fonctionnement de l’installation.
+                <p id="text2" class="textphoto">Audit à froid : Grâce à nos connaissances, nous expertisons vos équipements et installations en utilisant des outils de mesures comme (mesure d’épaisseurs). Un livrable sera fourni à la fin des expertises dans le but d’améliorer ou de
+                    corriger de garantir le bon fonctionnement de vos équipements. On inspecte ainsi tout type d’équipements de l’intérieur et de l’extérieur, exemple d’équipements : four (Sommet, Voute, Bruleurs), récupérateur, filtre à manche, DéNOx,
+                    échangeur, filtre à manche (Analyse dans un laboratoire certifié), catalyseur (Analyse dans un laboratoire certifié) <br> L’audit à froid est une inspection plus approfondie où on cible l’équipement défaillant ou endommagé qu’on identifie
+                    pendant le fonctionnement de l’installation.
                 </p>
             </div>
         </div>
@@ -166,31 +159,16 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos2 slider2">
-                <div class="slide2"><img src="/img/partenaire/lechler_logo.png" alt="logo partenaire lechler"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-neu-process.png" alt="logo partenaire NEU JKF"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-Siemens.png" alt="logo partenaire siemens"></div>
-                <div class="slide2"><img src="/img/partenaire/someflu.png" alt="logo partenaire someflu"></div>
-            </div>
+            <section id="Partenaire" class="customer-logos2 slider2">
+            </section>
         </div>
 
 
 
         <div class="container">
-            <h3 class="text-center font-weight-bold">nous font confiance :</h3>
-            <div class="customer-logos slider">
-                <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo confiance artelia"></div>
-                <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo confiance guerbet"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png" alt="logo confiance constellium"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-orange.png" alt="logo confiance orange"></div>
-                <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png" alt="logo confiance veolia"></div>
-                <div class="slide"><img src="/img/LogoConfiance/ocp.png" alt="logo confiance ocp"></div>
-                <div class="slide"><img src="/img/LogoConfiance/orano-logo.png" alt="logo confiance orano"></div>
-                <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg" alt="logo confiance sgd-pharma"></div>
-                <div class="slide"><img src="/img/LogoConfiance/siaap.png" alt="logo confiance siaap"></div>
-                <div class="slide"><img src="/img/LogoConfiance/suez.png" alt="logo confiance suez"></div>
-                <div class="slide"><img src="/img/LogoConfiance/valorhin.png" alt="logo confiance valorhin"></div>
-            </div>
+            <h2 class="text-center font-weight-bold">nous font confiance :</h2>
+            <section id="Confiance" class="customer-logos slider">
+            </section>
         </div>
 
     </div>
@@ -204,25 +182,23 @@
             </div>
 
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png" alt="logo telephone ">
-                <a  class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
+                <a id="Telephone" class="footerp" href=""></a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png" alt="logo mail ">
-                <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
+                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
+                <a id="Mail" class="footerp" href=""></a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png" alt="logo linkedin ">
-                <a target="_blank"  class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
+                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
+                <a id="Linkedin" target="_blank" class="footerp"></a>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png" alt="logo position ">
-                <a  class="footerp" target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
-                        8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
-
+                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
+                <a id="Local" target="_blank" class="footerp">
             </div>
 
             <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
