--- a/servithenFR/htmlFR/accueilFR.html
+++ b/servithenFR/htmlFR/accueilFR.html
@@ -11,10 +11,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="/servithenFR/jsFR/confianceFR.js"></script>
+    <script src="/servithenFR/jsFR/login.js"></script>
 
 </head>
 
 <body>
+
+
 
     <header>
 
@@ -155,11 +158,11 @@
                 </div>
                 <div class="hover" id="carteSection5">
                     <div class="card2">
-                        <p class="description">Installation complète</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left" alt="photo des services"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right" alt="photo des services"> <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg"
-                            class="middle" alt="photo des services"></div>
+                        <p class="description">Installation complète</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left" alt="photo des services"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right" alt="photo des services">
+                        <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg" class="middle" alt="photo des services"></div>
                 </div>
             </div>
-            <h4>Nos produits :</h4>
+            <h3>Nos produits :</h3>
             <div class="flex">
                 <div class="hover" id="carteProduit1">
                     <div class="card2">
