Page pourquoi modifiable

--- a/servithenFR/htmlFR/serviceFR/modifservice5.html
+++ b/servithenFR/htmlFR/serviceFR/modifservice5.html
@@ -27,7 +27,7 @@
 
 
         
-                <a href="/servithenEN/htmlEN/modifaccueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
                 <button>Confirmer les changements</button>
                 <textarea name="serv">5</textarea>
                 <a href="/servithenFR/htmlFR/serviceFR/service1.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
@@ -80,11 +80,11 @@
                 <div class="dropdown">
                     <button class="dropbtn">SAVOIR-FAIRE 
                   </button>
-                    <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR/modifpresentationFR.html">Présentation</a>
-                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
-                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
-                    </div>
+                  <div class="dropdown-content3">
+                    <a href="/servithenFR/htmlFR/modifpresentationFR.html">Notre métier</a>
+                    <a href="/servithenFR/htmlFR/modifpourquoiFR.html">Pourquoi Servithen</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Notre engagement</a>
+                </div>
                 </div>
 
                 <div class="dropdown">
